// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty snapshot renders 1`] = `
<div
  className="register-container"
>
  <h1>
    Sign up
  </h1>
  <form
    className=""
  >
    <label
      className="register-label form-label"
    >
      Username
    </label>
    <input
      className="register-input username-input form-control"
      onChange={[Function]}
      placeholder="Username"
      value=""
    />
    <label
      className="register-label form-label"
    >
      First name
    </label>
    <input
      className="register-input firstname-input form-control"
      onChange={[Function]}
      placeholder="First name"
      value=""
    />
    <label
      className="register-label form-label"
    >
      Last name
    </label>
    <input
      className="register-input lastname-input form-control"
      onChange={[Function]}
      placeholder="Last name"
      value=""
    />
    <label
      className="register-label form-label"
    >
      Password
    </label>
    <input
      className="register-input password-input form-control"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <label
      className="register-label form-label"
    >
      Confirm password
    </label>
    <input
      className="register-input confirm-input  form-control"
      onChange={[Function]}
      placeholder="Confirm password"
      type="password"
      value=""
    />
    <button
      className="submit-button btn btn-primary"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Register
    </button>
  </form>
</div>
`;

exports[`Snapshot with user data renders 1`] = `
<div
  className="register-container"
>
  <h1>
    Sign up
  </h1>
  <form
    className=""
  >
    <label
      className="register-label form-label"
    >
      Username
    </label>
    <input
      className="register-input username-input form-control"
      onChange={[Function]}
      placeholder="Username"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      First name
    </label>
    <input
      className="register-input firstname-input form-control"
      onChange={[Function]}
      placeholder="First name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Last name
    </label>
    <input
      className="register-input lastname-input form-control"
      onChange={[Function]}
      placeholder="Last name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Password
    </label>
    <input
      className="register-input password-input form-control"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Confirm password
    </label>
    <input
      className="register-input confirm-input  form-control"
      onChange={[Function]}
      placeholder="Confirm password"
      type="password"
      value="asdf"
    />
    <button
      className="submit-button btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Register
    </button>
  </form>
</div>
`;

exports[`Snapshot with user data renders 2`] = `
<div
  className="register-container"
>
  <h1>
    Sign up
  </h1>
  <form
    className=""
  >
    <label
      className="register-label form-label"
    >
      Username
    </label>
    <input
      className="register-input username-input form-control"
      onChange={[Function]}
      placeholder="Username"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      First name
    </label>
    <input
      className="register-input firstname-input form-control"
      onChange={[Function]}
      placeholder="First name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Last name
    </label>
    <input
      className="register-input lastname-input form-control"
      onChange={[Function]}
      placeholder="Last name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Password
    </label>
    <input
      className="register-input password-input form-control"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Confirm password
    </label>
    <input
      className="register-input confirm-input passwords-fail form-control"
      onChange={[Function]}
      placeholder="Confirm password"
      type="password"
      value="asdf2"
    />
    <button
      className="submit-button btn btn-primary"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Register
    </button>
  </form>
</div>
`;

exports[`Snapshot with user data renders 3`] = `
<div
  className="register-container"
>
  <h1>
    Sign up
  </h1>
  <form
    className=""
  >
    <label
      className="register-label form-label"
    >
      Username
    </label>
    <input
      className="register-input username-input form-control"
      onChange={[Function]}
      placeholder="Username"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      First name
    </label>
    <input
      className="register-input firstname-input form-control"
      onChange={[Function]}
      placeholder="First name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Last name
    </label>
    <input
      className="register-input lastname-input form-control"
      onChange={[Function]}
      placeholder="Last name"
      value="asdf"
    />
    <label
      className="register-label form-label"
    >
      Password
    </label>
    <input
      className="register-input password-input form-control"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <label
      className="register-label form-label"
    >
      Confirm password
    </label>
    <input
      className="register-input confirm-input  form-control"
      onChange={[Function]}
      placeholder="Confirm password"
      type="password"
      value=""
    />
    <button
      className="submit-button btn btn-primary"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Register
    </button>
  </form>
</div>
`;
